# dualsense-util

./: .gitignore  README.md  app.py  pyproject.toml
.github/workflows/: release.yml
src/dualsense_util/: bluetooth.py  devices.py  gui.py  main.py
